add button of my nfts

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3017,6 +3017,8 @@ textarea.form-control-lg {
 }
 
 .btn {
+  margin-left: 1rem;
+  margin-right: 1rem;
   display: inline-block;
   /* font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
   font-weight: 400;
